fixes project wrap

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -198,6 +198,7 @@ h3 {
     align-items: center;
     text-align: center;
     justify-content: center;
+    flex-wrap: wrap;
    
 }
 
@@ -205,13 +206,13 @@ h3 {
 .project-container {
     width: 40%;
     display: flex;
-    flex-flow: row-reverse;
-    flex-wrap: wrap;
+    
     min-height: 300px;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     outline: solid 5px red;
     margin: 5px;
+    min-width: 500px;
     
     
 }
